# rust-sqlx-grpc-nestjs

./: LICENSE  README.md
docker/: docker-compose.yml
nestjsClientGrpc/: package.json
nestjsClientGrpc/src/: app.module.ts  grpc.interface.ts  grpc.options.ts
nestjsClientGrpc/src/proto/: user_service.proto
nestjsClientGrpc/src/user/: user.controller.ts
rust_server_grpc/: Cargo.toml  build.rs
rust_server_grpc/migrations/: 000_create_users.sql  001_create_people.sql
rust_server_grpc/src/: server.rs
rust_server_grpc/src/model/: user.rs
rust_server_grpc/src/user/: user_controller.rs  user_repository.rs
