[package]
name = "rust_server_grpc"
version = "0.1.0"
authors = ["Máron <maron.franca@proenem.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6.1"
tonic = {version="0.2.0",features = ["tls"]}
tokio = {version="0.2.18",features = ["stream", "macros"]}
sqlx = { version = "0.4.0", features = [ "runtime-tokio-rustls", "postgres", ] }
futures = "0.3"
include_dir = "0.6"
sqlx-pg-migrate = "1.0"

[build-dependencies]
tonic-build = "0.2.0"

[[bin]]
name = "server"
path = "src/server.rs"